# Cafe-EM

./: .pre-commit-config.yaml  Makefile  README.md  init_env.py  manage.py  mypy.ini  pyproject.toml
CafeEM/: settings.py  urls.py  wsgi.py
apps/api/: apps.py  filters.py  serializers.py  urls.py  views.py  yasg.py
apps/core/: apps.py  urls.py  views.py
apps/dishes/: admin.py  apps.py  models.py  repositories.py
apps/dishes/migrations/: 0001_initial.py
apps/dishes/templatetags/: dish_tags.py
apps/orders/: admin.py  apps.py  choices.py  forms.py  models.py  repositories.py  signals.py  tests.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py
apps/orders/static/orders/css/: order-form.css  orders.css
apps/orders/static/orders/js/: search.js
apps/orders/templates/orders/: order_create.html  order_delete.html  order_update.html  orders.html
fixtures/: dish.json  type_dish.json
static/css/: style.css
templates/: base.html
templates/drf-yasg/: redoc.html
templates/includes/: footer.html  header.html
templates/rest_framework/: api.html
