[tool.poetry]
name = "cafe-em"
version = "0.1.0"
description = ""
authors = ["Denis Tokarev <wf.denis.tokarev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
django-debug-toolbar = "^5.0.1"
pre-commit = "^4.1.0"
django-stubs = "^5.1.3"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.1.2"
djangorestframework-stubs = "^3.15.3"
pillow = "^11.1.0"
django-filter = "^25.1"
drf-yasg = "^1.21.9"
hiredis = "^3.1.0"
redis = "^5.2.1"
django-csp = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
